<resources>
    <string name="appName">Travel Companion</string>
    <string-array name="currencies">
        <item>AUD</item>
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>JPY</item>
    </string-array>
    <string-array name="fuelEfficiencyUnits">
        <item>km/L</item>
        <item>mpg</item>
        <item>nmpg</item>
    </string-array>
    <string-array name="temperatureUnits">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>
    <string name="inputHint">0.00</string>
    <string name="convertSymbol">⇅</string>
    <string name="clearButtonTitle">Clear</string>
    <string name="currTabName">🪙 Currency</string>
    <string name="fuelTabName">⛽ Fuel</string>
    <string name="tempTabName">🌡 Temperature</string>

</resources>